# jumpgate

./: .filigree.conf  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  clippy.toml  loomweave.yaml
.agents/skills/loomweave-workflow/: .fingerprint
.cargo/: config.toml
.claude/: settings.json
.claude/skills/loomweave-workflow/: SKILL.md
.claude/skills/wardline-gate/: SKILL.md
crates/jumpgate-commons-cut/: Cargo.toml  RESULT.md
crates/jumpgate-commons-cut/src/: dp.rs  dynamics.rs  gate.rs  lib.rs  mc.rs  policies.rs  report.rs  rng_bridge.rs
crates/jumpgate-commons-cut/tests/: golden_trajectory.rs
crates/jumpgate-core/: Cargo.toml
crates/jumpgate-core/examples/: trophic_run.rs
crates/jumpgate-core/src/: autopilot.rs  config.rs  contract.rs  diagnostics.rs  economy.rs  ephemeris.rs  events.rs  hash.rs  ids.rs  ingest.rs  integrator.rs  lib.rs  math.rs  media.rs  pirate.rs  provenance.rs  replay.rs  rng.rs  scenario.rs  ship.rs  stores.rs  time.rs  types.rs  world.rs
crates/jumpgate-core/tests/: chronicle_epilogue.rs  physics_sanity.rs  replay_equivalence.rs
crates/jumpgate-py/: Cargo.toml  pyproject.toml
crates/jumpgate-py/src/: env.rs  lib.rs  obs.rs
docs/: glossary.md
docs/product/: current-state.md  metrics.md  roadmap.md  vision.md
docs/product/decisions/: 0001-bootstrap-from-observed-state.md  0002-thesis-venue-is-strategic-operational.md  0003-tactical-combat-is-gravity-decoupled.md  0004-newtonian-constraint-is-the-feature-positioning.md  0005-drl-room-lives-on-the-scale-density-path.md  0006-judge-v1-as-a-game-not-a-presolvability-gate.md  0007-haulage-cost-is-not-cargo-value.md  0008-staleness-anchor-is-the-rob-tick.md
docs/superpowers/concepts/: crimes.md  media-observability-engine.md
docs/superpowers/handovers/: 2026-06-09-handover-to-guidance-line.md
docs/superpowers/lab-notes/: 2026-06-11-ppo-contact-ablation-null.md
docs/superpowers/plans/: 2026-06-08-jumpgate-person-ship-plan-A-crewmods-seam.md  2026-06-08-jumpgate-v1-plan-0-contract-surface.md  2026-06-08-jumpgate-v1-plan-1-foundations.md  2026-06-08-jumpgate-v1-plan-2-physics.md  2026-06-08-jumpgate-v1-plan-3-engine-replay.md  2026-06-08-jumpgate-v1-plan-4-observation-gym.md  2026-06-09-first-economic-loop-harness.md  2026-06-09-jumpgate-guidance-parameter-system.md  2026-06-09-jumpgate-prelude-craftstore-confighash.md  2026-06-10-commons-miner-cut.md  2026-06-10-pirates-rung1-implementation.md  2026-06-10-tactical-flight-rung1-implementation.md  2026-06-10-trader-rung1-haulage-implementation.md  2026-06-10-trophic-cut-1-implementation.md  2026-06-11-media-rung1-gossip-implementation.md  2026-06-11-world-gets-big-implementation.md  2026-06-13-goods-as-goods-rung-a-implementation.md
docs/superpowers/posts/: 2026-06-13-gag-a0-baseline-digest.md
docs/superpowers/program/: charter.md  raid.md
docs/superpowers/reviews/: 2026-06-08-groundwork-review.md  2026-06-09-maneuver-authority-panel.md  (+1 more)
python/analysis/: fit_heterogeneity.py  haves_havenots.py  lurk_moves.py  media_log.py  radial_zones.py  sweep_bazaar.py  sweep_trophic.py  w4_grid.py  wa1_survival.py  wa2_spread_closure.py  wa3_wa5_joint.py  wa4_tanker.py  wa_route_concentration.py
python/jumpgate/: __init__.py  gym_env.py
python/tests/: test_fit_heterogeneity.py  test_gym_smoke.py  test_haves_havenots.py  test_learning_smoke.py  test_lurk_moves.py  test_radial_zones.py  test_sweep_cli.py  test_sweep_parsing.py  test_thrust_mode.py  test_trader_learning_smoke.py  test_trader_mode.py  test_trader_pirates_mode.py  test_w4_grid.py  test_wa1_survival.py  test_wa2_spread_closure.py  test_wa3_wa5_joint.py  test_wa4_tanker.py  test_wa_route_concentration.py
python/train/: baselines.py  curriculum.py  eval_pirates_ablation.py  render.py  train_flight.py  train_trader.py
(+233 files in other folders)
